# aArabic

./: .dockerignore  .env.example  .env.servicecore.example  .gitattributes  .gitignore  .gitmodules  ADAPTERS_MIGRATION_PLAN.md  GRAPHCHAT_SETUP.md  MOJO_MIGRATION_ROADMAP.md  MULTI_REPO_DOCKER_SETUP.md  README.md  T4_OPTIMIZATION_REVIEW.md  benchmark_results.json  docker-compose.yml  hello.mojo  protocol_demo.mojo  pytest.ini  read_gguf_tokens.py  requirements-dev.txt  requirements-test.txt  requirements.txt  set_demo.mojo  test  tmp_set_demo.mojo
.dvc/: config
archive/serviceTranslation-rust/: Cargo.toml  Dockerfile  NEXT_STEPS.md
archive/serviceTranslation-rust/archived_python/: download_and_convert_weights.py  run_benchmark.py  standalone_translator.py  training_pipeline.py
archive/serviceTranslation-rust/data/translation_training/: financial_terms.json
archive/serviceTranslation-rust/examples/: inspect_weights.rs
archive/serviceTranslation-rust/src/: backend_selector.rs.disabled  config.rs  evaluator.rs  main.rs  preprocessor.rs  translator.rs  weight_loader.rs
archive/serviceTranslation-rust/src/model/: embedding.rs
config/: graph_schemas.json  hana.config.json  service_registry.json  toolorchestra_tools.json
data/: README.md
docker/: Dockerfile.backend  Dockerfile.hyperbooklm  Dockerfile.langflow  (+14 more)
src/serviceAutomation/apisix-api-client/: Cargo.toml
src/serviceAutomation/apisix-api-client/src/: lib.rs  main.rs
src/serviceAutomation/dragonflydb-api-client/: Cargo.toml  Dockerfile
src/serviceAutomation/dragonflydb-api-client/src/: lib.rs  main.rs
src/serviceAutomation/filesystem-api-client/: Cargo.toml
src/serviceAutomation/filesystem-api-client/src/: lib.rs  main.rs
src/serviceAutomation/git-api-client/: Cargo.toml
src/serviceAutomation/git-api-client/src/: lib.rs  main.rs
src/serviceAutomation/gitea-api-client/: Cargo.toml
src/serviceAutomation/gitea-api-client/src/: lib.rs  main.rs
src/serviceAutomation/glean-api-client/: Cargo.toml
src/serviceAutomation/glean-api-client/src/: lib.rs  main.rs
src/serviceAutomation/hyperbook-api-client/: Cargo.toml
src/serviceAutomation/hyperbook-api-client/src/: lib.rs  main.rs
src/serviceAutomation/kafka-api-client/: Cargo.toml
src/serviceAutomation/kafka-api-client/src/: lib.rs  main.rs
src/serviceAutomation/keycloak-api-client/: Cargo.toml
src/serviceAutomation/keycloak-api-client/src/: lib.rs  main.rs
src/serviceAutomation/langflow-api-client/: Cargo.toml  README.md
src/serviceAutomation/langflow-api-client/src/: lib.rs  main.rs
src/serviceAutomation/lean4-api-client/: Cargo.toml
src/serviceAutomation/lean4-api-client/src/: lib.rs  main.rs
src/serviceAutomation/markitdown-api-client/: Cargo.toml
src/serviceAutomation/markitdown-api-client/src/: lib.rs  main.rs
src/serviceAutomation/marquez-api-client/: Cargo.toml
src/serviceAutomation/marquez-api-client/src/: lib.rs  main.rs
src/serviceAutomation/memgraph-api-client/: Cargo.toml  Dockerfile  README.md
src/serviceAutomation/memgraph-api-client/src/: lib.rs  main.rs
src/serviceAutomation/memory-api-client/: Cargo.toml
src/serviceAutomation/memory-api-client/src/: lib.rs  main.rs
src/serviceAutomation/n8n-api-client/: Cargo.toml
src/serviceAutomation/n8n-api-client/src/: lib.rs  main.rs
src/serviceAutomation/opencanvas-api-client/: Cargo.toml
src/serviceAutomation/opencanvas-api-client/src/: lib.rs  main.rs
src/serviceAutomation/postgres-api-client/: Cargo.toml
src/serviceAutomation/postgres-api-client/src/: lib.rs  main.rs
src/serviceAutomation/qdrant-api-client/: Cargo.toml  Dockerfile
src/serviceAutomation/qdrant-api-client/src/: lib.rs  main.rs
src/serviceAutomation/shimmy-api-client/: Cargo.toml
src/serviceAutomation/shimmy-api-client/src/: lib.rs  main.rs  websocket.rs
src/serviceAutomation/workflow-converter/: Cargo.toml  README.md  test_workflow_langflow.json  test_workflow_n8n.json
src/serviceAutomation/workflow-converter/src/: langflow_to_n8n.rs  main.rs  models.rs  n8n_to_langflow.rs
src/serviceCore/arabic-embedding-eval/: Cargo.toml  README.md
src/serviceCore/arabic-embedding-eval/src/: benchmark.rs  evaluator.rs  lib.rs  metrics.rs
src/serviceCore/serviceCommon/: Cargo.toml
src/serviceCore/serviceCommon/src/: lib.rs
src/serviceCore/serviceRegistry/: Cargo.toml
src/serviceCore/serviceRegistry/src/: main.rs
src/serviceIntelligence/lean4-rust/: Cargo.toml  Dockerfile
src/serviceIntelligence/lean4-rust/proofs/: TranslationCorrectness.lean
src/serviceIntelligence/lean4-rust/src/: config.rs  lib.rs  main.rs  md_parser.rs  models.rs  pipeline.rs  scip_converter.rs
src/serviceIntelligence/lean4-rust/src/gitea/: feature_generator.rs  mod.rs  n8n_parser.rs  template_generator.rs
src/serviceIntelligence/lean4-rust/workflow_proofs/: Main.lean  lake-manifest.json  lakefile.lean
src/serviceIntelligence/lean4-rust/workflow_proofs/.lake/config/[anonymous]/: lakefile.olean  lakefile.olean.trace
src/serviceIntelligence/lean4-rust/workflow_proofs/WorkflowProofs/: KafkaFormat.lean  LangflowCategories.lean  LangflowComponents.lean  LangflowComposition.lean  LangflowFormat.lean  LangflowInputTypes.lean  LangflowOutputTypes.lean  LangflowTemplates.lean  LangflowValidation.lean  N8nFormat.lean  ToonAgentProofs.lean  ToonAgents.lean  ToonFormat.lean  WorkflowCore.lean
src/serviceIntelligence/serviceN8n/: Cargo.toml  Dockerfile  README.md
src/serviceIntelligence/serviceN8n/n8n-workflows/: meta-orchestrator.json
src/serviceIntelligence/serviceN8n/src/: lib.rs  main.rs  orchestrator.rs
src/serviceIntelligence/serviceN8n/src/deployers/: automation.rs  gitea.rs  mod.rs
src/serviceIntelligence/serviceN8n/src/generators/: langflow.rs  mod.rs  rust_gen.rs
src/serviceVendor/serviceGitea/: Cargo.toml  Dockerfile
src/serviceVendor/serviceGitea/features/: .gitkeep
src/serviceVendor/serviceGitea/src/: feature_flags.rs  git_integration.rs  main.rs  storage_integration.rs
src/serviceVendor/serviceRegistry/: Cargo.toml
src/serviceVendor/serviceRegistry/src/: main.rs
(+5361 files in other folders)
