[package]
name = "arabic-translation-trainer"
version = "0.1.0"
edition = "2021"
authors = ["AI Nucleus Team"]
description = "High-performance Arabic-English translation training pipeline"

[dependencies]
# Core
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data processing
csv = "1.3"
polars = { version = "0.46", features = ["lazy", "strings", "json"] }
rayon = "1.10"
rand = "0.8"

# ML/NLP with Burn - Starting with CPU backend (NdArray)
# WGPU (GPU support) can be added later once core system works
burn = { version = "0.14", features = ["ndarray", "train", "autodiff"] }
tokenizers = "0.19"
hf-hub = "0.3"
ndarray = "0.15"
safetensors = "0.4"
half = "2.4"
# wgpu = "0.19"  # Add back once core works
# burn-wgpu = "0.14"  # Add back once core works  
# pollster = "0.3"  # Add back once core works

# Dataset handling  
arrow = "54.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# Text processing
unicode-normalization = "0.1"
unicode-segmentation = "1.12"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
