[package]
name = "apisix-api-client"
version = "1.0.0"
edition = "2021"
authors = ["Arabic Folder Project"]
description = "Complete Apache APISIX API Gateway client"

[lib]
name = "apisix_api_client"
path = "src/lib.rs"

[[bin]]
name = "apisix-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
