[package]
name = "dragonflydb-api-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for DragonflyDB (Redis-compatible)"

[[bin]]
name = "dragonfly-cli"
path = "src/main.rs"

[lib]
name = "dragonflydb_api"
path = "src/lib.rs"

[dependencies]
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
