[package]
name = "filesystem-api-client"
version = "1.0.0"
edition = "2021"
authors = ["Arabic Folder Project"]
description = "Complete filesystem operations API client"

[lib]
name = "filesystem_api_client"
path = "src/lib.rs"

[[bin]]
name = "fs-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.0"

[dev-dependencies]
tempfile = "3.0"
