[package]
name = "git-api-client"
version = "1.0.0"
edition = "2021"
authors = ["Arabic Folder Project"]
description = "Complete Git API client"

[lib]
name = "git_api_client"
path = "src/lib.rs"

[[bin]]
name = "git-cli"
path = "src/main.rs"

[dependencies]
git2 = "0.18"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
