[package]
name = "gitea-api-client"
version = "1.0.0"
edition = "2021"
authors = ["Arabic Folder Project"]
description = "Complete Gitea API client with 100% coverage"

[lib]
name = "gitea_api_client"
path = "src/lib.rs"

[[bin]]
name = "gitea-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
