[package]
name = "hyperbook-api-client"
version = "1.0.0"
edition = "2021"
authors = ["Arabic Folder Project"]
description = "Complete Hyperbook API client - Educational content management"

[lib]
name = "hyperbook_api_client"
path = "src/lib.rs"

[[bin]]
name = "hyperbook-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
