[package]
name = "kafka-api-client"
version = "1.0.0"
edition = "2021"
authors = ["Arabic Folder Project"]
description = "Complete Apache Kafka API client with rust-rdkafka"

[lib]
name = "kafka_api_client"
path = "src/lib.rs"

[[bin]]
name = "kafka-cli"
path = "src/main.rs"

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
