[package]
name = "keycloak-api-client"
version = "1.0.0"
edition = "2021"
authors = ["Arabic Folder Project"]
description = "Complete Keycloak authentication and authorization API client"

[lib]
name = "keycloak_api_client"
path = "src/lib.rs"

[[bin]]
name = "keycloak-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
url = "2.4"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
