[package]
name = "langflow-api-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "langflow_api_client"
path = "src/lib.rs"

[[bin]]
name = "langflow-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
