[package]
name = "lean4-api-client"
version = "1.0.0"
edition = "2021"
authors = ["Arabic Folder Project"]
description = "Complete Lean4 theorem prover API client"

[lib]
name = "lean4_api_client"
path = "src/lib.rs"

[[bin]]
name = "lean4-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
