[package]
name = "memgraph-api-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aimo-memgraph-cli"
path = "src/main.rs"

[lib]
name = "memgraph_api_client"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
