[package]
name = "postgres-api-client"
version = "1.0.0"
edition = "2021"
authors = ["Arabic Folder Project"]
description = "Complete PostgreSQL API client"

[lib]
name = "postgres_api_client"
path = "src/lib.rs"

[[bin]]
name = "postgres-cli"
path = "src/main.rs"

[dependencies]
postgres = "0.19"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
