[package]
name = "qdrant-api-client"
version = "0.3.0"
edition = "2021"
description = "Rust client for Qdrant vector database using v1.12 API"

[[bin]]
name = "qdrant-cli"
path = "src/main.rs"

[lib]
name = "qdrant_api"
path = "src/lib.rs"

[dependencies]
qdrant-client = "1.12"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
