[package]
name = "shimmy-api-client"
version = "1.0.0"
edition = "2021"
authors = ["Arabic Folder Project"]
description = "Complete Shimmy-AI API client for local inference"

[lib]
name = "shimmy_api_client"
path = "src/lib.rs"

[[bin]]
name = "shimmy-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
futures = "0.3"
futures-util = "0.3"
url = "2.4"

[dev-dependencies]
tokio-test = "0.4"
