[package]
name = "service-registry"
version = "0.1.0"
edition = "2021"
authors = ["Nucleus Team"]
description = "Service Registry - Service Discovery & Orchestration for serviceCore"
license = "MIT"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
dashmap = "5.5"
config = "0.13"

[dev-dependencies]
actix-rt = "2.9"

[[bin]]
name = "service-registry"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1