[package]
name = "lean4-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex and text processing
regex = "1.10"
pulldown-cmark = "0.9"  # Markdown parsing
lazy_static = "1.4"     # Static regex compilation
once_cell = "1.19"      # One-time initialization

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.11"
log = "0.4"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP client for data layer integration
reqwest = { version = "0.11", features = ["json"] }

# File system walking
walkdir = "2.4"

[dev-dependencies]
cargo-watch = "8.4"
