[package]
name = "service-n8n"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# File system operations
tokio-fs = "0.1"

# Templating
handlebars = "5.1"

# Lean4 parser integration
lean4-parser = { path = "../lean4-rust" }

[dev-dependencies]
actix-rt = "2.9"