[workspace]
members = [
    "features/*",
]

[package]
name = "service-gitea"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Database (for Gitea integration)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[workspace.dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"