[package]
name = "service-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
neo4rs = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7"
